[workspace]
members = [
  "bidi",
  "bidi/generate",
  "strip-ansi-escapes",
  "sync-color-schemes",
  "deps/cairo",
  "wezterm",
  "wezterm-blob-leases",
  "wezterm-dynamic",
  "wezterm-gui",
  "wezterm-mux-server",
  "wezterm-open-url",
  "wezterm-ssh",
  "wezterm-uds",
]
resolver = "2"
exclude = [
  "termwiz/codegen"
]

[profile.release]
opt-level = 3
# debug = 2

[profile.dev]
# https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
# Disabled because it breaks builds on Windows
#split-debuginfo = "unpacked"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
assert_fs = "1.0.4"
async-channel = "2.3"
async-executor = "1.11"
async-io = "2.3"
async-task = "4.7"
async-trait = "0.1"
async_ossl = { path = "async_ossl" }
backtrace = "0.3"
base64 = "0.22"
base91 = { path = "base91" }
battery = { path = "lua-api-crates/battery" }
benchmarking = "0.4"
bintree = { path = "bintree" }
bitflags = "1.3"
block2 = "0.6"
bstr = "1.0"
bytemuck = { version="1.4", features=["derive"]}
bytes = "1.0"
cairo-rs = {version="0.18", default-features=false} # See patch.crates-io section
camino = "1.0"
cassowary = "0.3"
cc = {version="1.0", features = ["parallel"]}
cgl = "0.3"
chrono = {version="0.4", default-features=false, features=["unstable-locales", "serde"]}
clap = {version="4.0", features=["derive"]}
clap_complete = "4.4"
clap_complete_fig = "4.0"
clipboard-win = "2.2"
cocoa = "0.26"
codec = { path = "codec" }
color-funcs = { path = "lua-api-crates/color-funcs" }
colorgrad = "0.6"
config = { path = "config" }
core-foundation = "0.10"
core-graphics = "0.24"
core-text = "21.0"
criterion = "0.5"
crossbeam = "0.8"
csscolorparser = "0.6"
deltae = "0.3"
dhat = "0.3"
dirs-next = "2.0"
dns-lookup = "2.0"
downcast-rs = "1.0"
dwrote = "0.11"
embed-resource = "1.7"
emojis = "0.6"
encoding_rs = "0.8"
enum-display-derive = "0.1"
env-bootstrap = { path = "env-bootstrap" }
env_logger = "0.11"
euclid = "0.22"
fancy-regex = "0.11"
fastrand = "2.0"
filedescriptor = { version="0.8.3", path = "filedescriptor" }
filenamegen = "0.2.6"
filesystem = { path = "lua-api-crates/filesystem" }
finl_unicode = "1.2"
fixed = "1.23"
fixedbitset = "0.4"
flume = "0.11"
fnv = "1.0"
fontconfig = { path = "deps/fontconfig" }
frecency = { path = "frecency" }
freetype = { path = "deps/freetype" }
futures = "0.3"
futures-lite = "2.3"
futures-util = "0.3"
gethostname = "0.5"
getrandom = "0.3.1"
git2 = { version = "0.20", default-features = false, features = ["https"] }
gl_generator = "0.14"
glium = { version = "0.35", default-features = false }
governor = {version="0.5", default-features=false, features=["std"]}
guillotiere = "0.6"
harfbuzz = { path = "deps/harfbuzz" }
hdrhistogram = "7.1"
hex = "0.4"
hostname = "0.4"
http_req = "0.11"
human-sort = "0.2"
humansize = "2.1"
humantime = "2.1"
image = "0.25"
intrusive-collections = "0.9"
k9 = "0.12.0"
lazy_static = "1.4"
leb128 = "0.2"
lfucache = { path = "lfucache" }
libc = "0.2"
libflate = "2"
libloading = "0.8"
libssh-rs = "0.3.5"
line_drawing = "0.8"
log = "0.4"
logging = { path = "lua-api-crates/logging" }
lru = "0.12"
luahelper = { path = "luahelper" }
mac_address = "1.1.8"
maplit = "1.0"
memmap2 = "0.9"
memmem = "0.1"
metrics = "0.23"
miniz_oxide = "0.7"
mio = "0.8"
mlua = "0.9"
mux = { path = "mux" }
mux-lua = { path = "lua-api-crates/mux" }
names = { version = "0.12", default-features = false }
nix = "0.29"
notify = "5.0.0"
ntapi = "0.4"
nucleo-matcher = "0.3"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
objc = "0.2"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"
openssl = "0.10.57"
ordered-float = "4.1"
parking_lot = "0.12"
passfd = "0.1.6"
percent-encoding = "2.3"
pest = "2.1"
pest_derive = "2.1"
phf = "0.11"
phf_codegen = "0.10"
pkg-config = "0.3"
plist = "1.7"
plugin = { path = "lua-api-crates/plugin" }
portable-pty = { path = "pty" }
predicates = "3.0"
proc-macro2 = "1.0"
procinfo = { path = "procinfo" }
procinfo-funcs = { path = "lua-api-crates/procinfo-funcs" }
promise = { path = "promise" }
quote = "1.0.2"
rangeset = { path = "rangeset" }
ratelim= { path = "ratelim" }
raw-window-handle = "0.6"
rayon = "1.10"
rcgen = "0.12"
regex = "1"
reqwest = "0.12"
resize = "0.5"
rstest = "0.21"
rusqlite = "0.32"
serde = {version="1.0", features = ["derive"]}
serde-funcs = { path = "lua-api-crates/serde-funcs" }
serde_json = "1.0"
serde_with = {version="2.0", features = ["chrono_0_4"]}
serde_yaml = "0.9"
serial2 = "0.2"
sha2 = "0.10"
share-data = { path = "lua-api-crates/share-data" }
shared_library = "0.1"
shell-words = "1.1"
shlex = "1.1"
signal-hook = "0.3"
siphasher = "1.0.1"
smithay-client-toolkit = {version = "0.19", default-features=false}
smol = "2.0"
socket2 = "0.5"
spa = "0.3.1"
spawn-funcs = { path = "lua-api-crates/spawn-funcs" }
sqlite-cache = "0.1.4"
ssh-funcs = { path = "lua-api-crates/ssh-funcs" }
ssh2 = "0.9.3"
starship-battery = "0.10"
strsim = "0.11"
syn = "1.0"
tabout = { path = "tabout" }
tar = "0.4"
tempfile = "3.16"
terminfo = "0.9"
termios = "0.3"
termwiz = { path = "termwiz" }
termwiz-funcs = { path = "lua-api-crates/termwiz-funcs" }
textwrap = "0.16"
thiserror = "1.0"
time-funcs = { path = "lua-api-crates/time-funcs" }
tiny-skia = "0.11"
tokio = "1.43"
toml = "0.8"
ucd-trie = "0.1"
uds_windows = "1.1"
umask = { path = "umask" }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12"
url = "2"
url-funcs = { path = "lua-api-crates/url-funcs" }
utf8parse = "0.2"
uuid = "1.13"
varbincode = "0.1"
vtparse = { version="0.6.2", path="vtparse" }
walkdir = "2"
wayland-backend = "0.3.5"
wayland-client = "0.31"
wayland-egl = "0.32"
wayland-protocols = "0.32"
wezterm-bidi = { version="0.2.3", path = "bidi" }
wezterm-blob-leases = { version="0.1.1", path = "wezterm-blob-leases"}
wezterm-client = { path = "wezterm-client" }
wezterm-color-types = { version="0.3", path = "color-types" }
wezterm-config-derive = { version="0.1", path="config/derive" }
wezterm-dynamic = { version = "0.2.1", path = "wezterm-dynamic" }
wezterm-dynamic-derive = { version="0.1.1", path="wezterm-dynamic/derive" }
wezterm-font = { path = "wezterm-font" }
wezterm-gui-subcommands = { path = "wezterm-gui-subcommands" }
wezterm-input-types = { version="0.1", path = "wezterm-input-types" }
wezterm-mux-server-impl = { path = "wezterm-mux-server-impl" }
wezterm-open-url = { path = "wezterm-open-url" }
wezterm-ssh = { path = "wezterm-ssh" }
wezterm-term = { path = "term" }
wezterm-toast-notification = { path = "wezterm-toast-notification" }
wezterm-uds = { path = "wezterm-uds" }
wezterm-version = { path = "wezterm-version" }
wgpu = "24.0.1"
whoami = "1.5"
winapi = "0.3.9"
window = {path="window"}
window-funcs = { path = "lua-api-crates/window-funcs" }
windows = "0.33.0"
winreg = "0.10"
x11 = "2.21"
xcb = "1.3"
xcb-imdkit = { version="0.3", git="https://github.com/wez/xcb-imdkit-rs.git", rev="358e226573461fe540efb920e2aad740e3c6fab1"}
xkbcommon = "0.7.0"
xml-rs = "0.8"
zbus = "4.2"
zstd = "0.11"
zvariant = "4.0"

[patch.crates-io]
# We use our own vendored cairo, which has minimal deps and should just
# build via cargo.
cairo-sys-rs = {path="deps/cairo", version="0.18.0"}
