[package]
name = "codec"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
config = { path = "../config" }
leb128 = "0.2"
log.workspace = true
metrics = { version="0.17", features=["std"]}
mux = { path = "../mux" }
portable-pty = { path = "../pty", features = ["serde_support"]}
rangeset = { path = "../rangeset" }
serde = {version="1.0", features = ["rc", "derive"]}
smol.workspace = true
termwiz = { path = "../termwiz" }
thiserror.workspace = true
varbincode = "0.1"
wezterm-term = { path = "../term", features=["use_serde"] }
zstd = "0.11"

[dev-dependencies]
base91 = { path = "../base91" }
