[package]
name = "codec"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
config = { path = "../config" }
leb128 = "0.2"
log = "0.4"
metrics = "0.23"
mux = { path = "../mux" }
portable-pty = { path = "../pty", features = ["serde_support"]}
rangeset = { path = "../rangeset" }
serde = {version="1.0", features = ["rc", "derive"]}
smol = "2.0"
termwiz = { path = "../termwiz" }
thiserror = "1.0"
varbincode = "0.1"
wezterm-term = { path = "../term", features=["use_serde"] }
zstd = "0.11"

[dev-dependencies]
base91 = { path = "../base91" }
