[package]
name = "wezterm-color-types"
version = "0.1.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Types for working with colors"
license = "MIT"

[features]
use_serde = ["serde"]

[dependencies]
csscolorparser = "0.6"
lazy_static = "1.4"
serde = {version="1.0", features = ["derive"], optional=true}
