[package]
name = "wezterm-color-types"
version = "0.3.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "Types for working with colors"
license = "MIT"

[features]
use_serde = ["serde"]

[dependencies]
csscolorparser = {version="0.6", features=["lab"]}
deltae = "0.3"
lazy_static = "1.4"
serde = {version="1.0", features = ["derive"], optional=true}
wezterm-dynamic = { path = "../wezterm-dynamic", version="0.2" }
