[package]
name = "wezterm-color-types"
version = "0.3.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Types for working with colors"
license = "MIT"

[features]
use_serde = ["serde"]

[dependencies]
csscolorparser = {workspace=true, features=["lab"]}
deltae.workspace = true
lazy_static.workspace = true
serde = {workspace=true, features = ["derive"], optional=true}
wezterm-dynamic.workspace = true
