[package]
name = "config"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger = "0.9"

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
chrono = {version="0.4", features=["unstable-locales"]}
colorgrad = "0.5"
dirs-next = "2.0"
enum-display-derive = "0.1"
hostname = "0.3"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
luahelper = { path = "../luahelper" }
mlua = {version="0.8.0-beta.4", features=["vendored", "lua54", "async", "send"]}
# file change notification
notify = "4.0"
ordered-float = { version = "3.0", features = ["serde"] }
portable-pty = { path = "../pty", features = ["serde_support"]}
promise = { path = "../promise" }
serde = {version="1.0", features = ["rc", "derive"]}
shlex = "1.1"
smol = "1.2"
termwiz = { path = "../termwiz", features=["use_serde"] }
toml = "0.5"
umask = { path = "../umask" }
wezterm-dynamic = { path = "../wezterm-dynamic" }
wezterm-bidi = { path = "../bidi" }
wezterm-input-types = { path = "../wezterm-input-types" }
wezterm-term = { path = "../term", features=["use_serde"] }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["winuser"]}
