[package]
name = "filedescriptor"
version = "0.9.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wez/wezterm"
description = "More ergonomic wrappers around RawFd and RawHandle"
license = "MIT"
documentation = "https://docs.rs/filedescriptor"
readme = "README.md"
keywords = ["socketpair", "pipe", "poll", "filedescriptor"]

[dependencies]
thiserror = "1.0"
libc = "0.2"

[target."cfg(windows)".dependencies]
windows = { version="0.52.0", features = [
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]}
