[package]
name = "filedescriptor"
version = "0.8.3"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "More ergonomic wrappers around RawFd and RawHandle"
license = "MIT"
documentation = "https://docs.rs/filedescriptor"
readme = "README.md"
keywords = ["socketpair", "pipe", "poll", "filedescriptor"]

[dependencies]
thiserror = "1.0"
libc = "0.2"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "processthreadsapi",
    "winsock2",
    "processenv"
]}
