[package]
name = "filedescriptor"
version = "0.8.3"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "More ergonomic wrappers around RawFd and RawHandle"
license = "MIT"
documentation = "https://docs.rs/filedescriptor"
readme = "README.md"
keywords = ["socketpair", "pipe", "poll", "filedescriptor"]

[dependencies]
thiserror.workspace = true
libc.workspace = true

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [
    "winuser",
    "handleapi",
    "fileapi",
    "namedpipeapi",
    "processthreadsapi",
    "winsock2",
    "processenv"
]}
