[package]
name = "frecency"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4", default-features=false}
serde = {version="1.0", features = ["derive"]}
serde_with = {version="2.0", features = ["chrono_0_4"]}

[dev-dependencies]
serde_json = "1.0"
