[package]
name = "frecency"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
serde = {workspace=true, features = ["derive"]}
serde_with.workspace = true

[dev-dependencies]
serde_json.workspace = true
