[package]
name = "lfucache"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
config.workspace = true
fnv.workspace = true
intrusive-collections.workspace = true
metrics.workspace = true

[dev-dependencies]
k9.workspace = true
