[package]
name = "mux"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
base64 = "0.21"
bintree = { path = "../bintree" }
bitflags = "1.3"
chrono = { version = "0.4", features = ["serde"] }
config = { path = "../config" }
crossbeam = "0.8"
downcast-rs = "1.0"
filedescriptor = { version="0.8", path = "../filedescriptor" }
finl_unicode = "1.2"
hostname = "0.3"
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
luahelper = { path = "../luahelper" }
metrics = { version="0.17", features=["std"]}
mlua = "0.8.3"
names = { version = "0.12", default-features = false }
nix = {version="0.25", features=["term"]}
parking_lot = "0.12"
percent-encoding = "2"
portable-pty = { path = "../pty", features = ["serde_support"]}
procinfo = { path = "../procinfo" }
promise = { path = "../promise" }
rangeset = { path = "../rangeset" }
regex = "1"
serde = {version="1.0", features = ["rc", "derive"]}
shell-words = "1.1"
smol.workspace = true
terminfo = "0.7"
termwiz = { path = "../termwiz" }
termwiz-funcs = { path = "../lua-api-crates/termwiz-funcs" }
textwrap = "0.16"
thiserror.workspace = true
url = "2"
wezterm-ssh = { path = "../wezterm-ssh" }
wezterm-dynamic = { path = "../wezterm-dynamic" }
wezterm-term = { path = "../term", features=["use_serde"] }
flume = "0.10"

[target."cfg(windows)".dependencies]
ntapi = "0.4"
winapi = { version = "0.3", features = [
    "handleapi",
    "memoryapi",
    "psapi",
    "processthreadsapi",
    "tlhelp32",
]}

[dev-dependencies]
k9 = "0.11"
