[package]
name = "procinfo"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["lua"]
lua = ["dep:luahelper", "dep:wezterm-dynamic"]

[dependencies]
libc = "0.2"
log = "0.4"
luahelper = { path = "../luahelper", optional = true }
wezterm-dynamic = { path = "../wezterm-dynamic", optional = true }

[target."cfg(windows)".dependencies]
ntapi = "0.4"
winapi = { version = "0.3", features = [
    "handleapi",
    "memoryapi",
    "psapi",
    "processthreadsapi",
    "shellapi",
    "tlhelp32",
]}

